--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
-    "cookie-parser": "^1.4.3"
+    "cookie-parser": "^1.4.3",
+    "passport": "^0.3.2",
+    "passport-spotify": "^0.3.0"
   }
 }
