--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.2",
+    "express-partials": "^0.3.0",
     "passport": "^0.3.2",
     "passport-spotify": "^0.3.0"
   }
