--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "consolidate": "^0.14.1",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.2",
     "express-partials": "^0.3.0",
-    "express-session": "^1.14.1",
+     "express-session": "^1.14.1",
+    "method-override": "^2.3.6",
     "passport": "^0.3.2",
-    "passport-spotify": "^0.3.0"
+    "passport-spotify": "^0.3.0",
+    "swig": "^1.4.2"
   }
 }
