--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "mocha": "^3.0.2",
     "chai": "^3.5.0",
     "nodemon": "^1.10.2",
-    "request": "^2.74.0"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -28,6 +27,7 @@
     "express-session": "^1.14.1",
     "passport": "^0.3.2",
     "passport-spotify": "^0.3.0",
+    "request": "^2.74.0",
     "swig": "^1.4.2"
   }
 }
