--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "mocha": "^3.0.2",
     "chai": "^3.5.0",
-    "nodemon": "^1.10.2",
+    "nodemon": "^1.10.2"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
